--- a/app/src/main/res/layout/activity_chambre.xml
+++ b/app/src/main/res/layout/activity_chambre.xml
@@ -117,6 +117,19 @@
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/machinealaver" />
 
+                <Space
+                    android:layout_width="125dp"
+                    android:layout_height="175dp" />
+
+                <ImageButton
+                    android:id="@+id/btnFrigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="175dip"
+                    android:background="@android:color/transparent"
+                    app:srcCompat="@drawable/fridge" />
+
+
+
             </TableRow>
 
         </TableLayout>
@@ -168,6 +181,106 @@
                     android:layout_height="115dip"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/chair" />
+            </TableRow>
+
+            <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/energie">
+            </EditText>
+
+            <ProgressBar
+                android:id="@+id/energieBar"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:progress="50"/>
+
+        </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/satiete">
+                </EditText>
+
+                <ProgressBar
+                    android:id="@+id/satieteBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:progress="50"/>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/hygiene">
+                </EditText>
+
+                <ProgressBar
+                    android:id="@+id/hygieneBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:progress="50"/>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/humeur">
+                </EditText>
+
+                <ProgressBar
+                    android:id="@+id/humeurBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:progress="50"/>
+
+            </TableRow>
+
+            <TableRow>
+
+                <Space
+                    android:layout_width="30dp"
+                    android:layout_height="70dp" />
+                <Space
+                    android:layout_width="150dp"
+                    android:layout_height="70dp" />
+                <Space
+                    android:layout_width="150dp"
+                    android:layout_height="70dp" />
+
+                <ImageButton
+                    android:id="@+id/btnHamburger"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="false"
+                    android:background="@android:color/transparent"
+                    app:srcCompat="@drawable/hamburger" />
+
+
+
             </TableRow>
 
         </TableLayout>
