--- a/app/src/main/res/layout/activity_chambre.xml
+++ b/app/src/main/res/layout/activity_chambre.xml
@@ -153,7 +153,9 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="false"
                     android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/lit" />
+                    android:onClick="cliqueBtnDormir"
+                    app:srcCompat="@drawable/lit"
+                    />
 
             </TableRow>
 
