--- a/app/src/main/res/layout/activity_chambre.xml
+++ b/app/src/main/res/layout/activity_chambre.xml
@@ -86,7 +86,8 @@
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/colorAccent">
+                android:background="@color/colorAccent"
+                android:onClick="cliqueBtnDouche">
 
                 <ImageButton
                     android:id="@+id/btnShower"
@@ -104,7 +105,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/lavabo" />
+                    app:srcCompat="@drawable/lavabo"/>
 
                 <Space
                     android:layout_width="30dip"
