--- a/app/src/main/res/layout/activity_chambre.xml
+++ b/app/src/main/res/layout/activity_chambre.xml
@@ -34,7 +34,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center|center_horizontal|center_vertical"
-                            android:text="Jour 1" />
+                            android:text="Jour 1"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                     </TableRow>
 
                     <TableRow
@@ -46,235 +47,47 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center|center_horizontal|center_vertical"
-                            android:text="Lundi" />
+                            android:text="Lundi"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                     </TableRow>
 
                 </TableLayout>
+
+                <Space
+                    android:layout_width="10dip"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/textHour"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="00:00"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+                <Space
+                    android:layout_width="68dip"
+                    android:layout_height="wrap_content" />
 
                 <ImageButton
                     android:id="@+id/btnSchedule"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/schedule" />
-
-                <ImageButton
-                    android:id="@+id/btnLevel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/level" />
+                    app:srcCompat="@drawable/schedule"
+                    />
 
                 <ImageButton
                     android:id="@+id/btnPurse"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="cliqueBtnShop"
-                    app:srcCompat="@drawable/purse" />
+                    app:srcCompat="@drawable/purse"
+                    android:onClick="cliqueBtnShop"/>
 
                 <ImageButton
                     android:id="@+id/btnSettings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/settings" />
-
-            </TableRow>
-
-        </TableLayout>
-
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@color/colorAccent"
-                >
-
-                <ImageButton
-                    android:id="@+id/btnShower"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/shower2"
-                    android:onClick="cliqueBtnDouche"/>
-
-                <Space
-                    android:layout_width="60dip"
-                    android:layout_height="180dip" />
-
-                <ImageButton
-                    android:id="@+id/btnSink"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/lavabo"/>
-
-                <Space
-                    android:layout_width="30dip"
-                    android:layout_height="60dip" />
-
-                <ImageButton
-                    android:id="@+id/btnMachine"
-                    android:layout_width="wrap_content"
-                    android:layout_height="175dip"
-                    android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/machinealaver" />
-
-                <Space
-                    android:layout_width="125dp"
-                    android:layout_height="175dp" />
-
-                <ImageButton
-                    android:id="@+id/btnFrigo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="175dip"
-                    android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/fridge" />
-
-
-
-            </TableRow>
-
-        </TableLayout>
-
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorPrimary">
-
-                <Space
-                    android:layout_width="85dip"
-                    android:layout_height="130dip" />
-
-                <ImageButton
-                    android:id="@+id/btnBed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="false"
-                    android:background="@android:color/transparent"
-                    android:onClick="cliqueBtnDormir"
-                    app:srcCompat="@drawable/lit"
-                    />
-
-            </TableRow>
-
-        </TableLayout>
-
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/holo_blue_light">
-
-                <ImageButton
-                    android:id="@+id/imageButton9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/bureau" />
-
-                <ImageButton
-                    android:id="@+id/imageButton10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="115dip"
-                    android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/chair" />
-            </TableRow>
-
-            <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/energie">
-            </EditText>
-
-            <ProgressBar
-                android:id="@+id/energieBar"
-                style="@android:style/Widget.ProgressBar.Horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:progress="50"/>
-
-        </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/satiete">
-                </EditText>
-
-                <ProgressBar
-                    android:id="@+id/satieteBar"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:progress="50"/>
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/hygiene">
-                </EditText>
-
-                <ProgressBar
-                    android:id="@+id/hygieneBar"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:progress="50"/>
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/humeur">
-                </EditText>
-
-                <ProgressBar
-                    android:id="@+id/humeurBar"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:progress="50"/>
-
-            </TableRow>
-
-            <TableRow>
-
-                <Space
-                    android:layout_width="30dp"
-                    android:layout_height="70dp" />
-                <Space
-                    android:layout_width="150dp"
-                    android:layout_height="70dp" />
-                <Space
-                    android:layout_width="150dp"
-                    android:layout_height="70dp" />
 
                 <ImageButton
                     android:id="@+id/btnHamburger"
@@ -284,7 +97,253 @@
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/hamburger" />
 
+            </TableRow>
 
+        </TableLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bkgd_room2">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+                    <TableRow
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent">
+
+                        <ImageButton
+                            android:id="@+id/btnShower"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            app:srcCompat="@drawable/shower2"
+                            android:onClick="cliqueBtnDouche"/>
+
+                        <Space
+                            android:layout_width="60dip"
+                            android:layout_height="180dip" />
+
+                        <ImageButton
+                            android:id="@+id/btnSink"
+                            android:layout_width="wrap_content"
+                            android:layout_height="96dp"
+                            android:background="@android:color/transparent"
+                            app:srcCompat="@drawable/lavabo2" />
+
+                        <Space
+                            android:layout_width="30dip"
+                            android:layout_height="60dip" />
+
+                        <ImageButton
+                            android:id="@+id/btnMachine"
+                            android:layout_width="wrap_content"
+                            android:layout_height="175dip"
+                            android:background="@android:color/transparent"
+                            app:srcCompat="@drawable/machinealaver" />
+
+
+                    </TableRow>
+
+                </TableLayout>
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageButton
+                            android:id="@+id/btnBooks"
+                            android:layout_width="70dip"
+                            android:layout_height="140dip"
+                            android:background="@android:color/transparent"
+                            app:srcCompat="@drawable/books" />
+
+                        <Space
+                            android:layout_width="10dip"
+                            android:layout_height="130dip" />
+
+                        <ImageButton
+                            android:id="@+id/btnBed"
+                            android:layout_width="wrap_content"
+                            android:layout_height="180dip"
+                            android:adjustViewBounds="false"
+                            android:background="@android:color/transparent"
+                            app:srcCompat="@drawable/lit"
+                            android:onClick="cliqueBtnDormir"/>
+
+                        <Space
+                            android:layout_width="180dip"
+                            android:layout_height="wrap_content" />
+
+                        <ImageButton
+                            android:id="@+id/btnFridge"
+                            android:layout_width="wrap_content"
+                            android:layout_height="130dip"
+                            android:background="@android:color/transparent"
+                            app:srcCompat="@drawable/fridge" />
+
+                        <Space
+                            android:layout_width="30dip"
+                            android:layout_height="wrap_content" />
+
+                        <ImageButton
+                            android:id="@+id/btnDoor"
+                            android:layout_width="wrap_content"
+                            android:layout_height="80dip"
+                            android:background="@android:color/transparent"
+                            app:srcCompat="@drawable/door" />
+
+                    </TableRow>
+
+                </TableLayout>
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="100dip">
+
+                        <ImageButton
+                            android:id="@+id/btnComputer"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:src="@drawable/bureau" />
+
+                        <ImageButton
+                            android:id="@+id/btnChair"
+                            android:layout_width="wrap_content"
+                            android:layout_height="115dip"
+                            android:background="@android:color/transparent"
+                            app:srcCompat="@drawable/chair" />
+                    </TableRow>
+
+                </TableLayout>
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"/>
+
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="80dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/energie"></EditText>
+
+                <ProgressBar
+                    android:id="@+id/energieBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="200dip"
+                    android:layout_height="match_parent"
+                    android:progress="50" />
+
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="80dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/satiete"></EditText>
+
+                <ProgressBar
+                    android:id="@+id/satieteBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="200dip"
+                    android:layout_height="match_parent"
+                    android:progress="50" />
+
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="80dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/hygiene"></EditText>
+
+                <ProgressBar
+                    android:id="@+id/hygieneBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="200dip"
+                    android:layout_height="match_parent"
+                    android:progress="50" />
+
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:layout_width="80dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/humeur"></EditText>
+
+                <ProgressBar
+                    android:id="@+id/humeurBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="200dip"
+                    android:layout_height="match_parent"
+                    android:progress="50" />
+
+                <Space
+                    android:layout_width="98dip"
+                    android:layout_height="wrap_content" />
 
             </TableRow>
 
