Modif des barres en bas + menu des skills

--- a/app/src/main/res/layout/activity_chambre.xml
+++ b/app/src/main/res/layout/activity_chambre.xml
@@ -82,6 +82,7 @@
                 android:id="@+id/btnSkills"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="clicqueBtnCompetences"
                 app:srcCompat="@drawable/skills" />
 
             <ImageButton
