--- a/app/src/main/res/layout/activity_chambre.xml
+++ b/app/src/main/res/layout/activity_chambre.xml
@@ -163,7 +163,8 @@
                             android:layout_width="70dip"
                             android:layout_height="140dip"
                             android:background="@android:color/transparent"
-                            app:srcCompat="@drawable/books" />
+                            app:srcCompat="@drawable/books"
+                            />
 
                         <ImageButton
                             android:id="@+id/btnBed"
@@ -194,7 +195,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="80dip"
                             android:background="@android:color/transparent"
-                            app:srcCompat="@drawable/door" />
+                            app:srcCompat="@drawable/door"
+                            android:onClick="clickBtnCours"/>
 
                     </TableRow>
 
@@ -206,7 +208,8 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="100dip">
+                        android:layout_height="100dip"
+                        >
 
                         <ImageButton
                             android:id="@+id/btnComputer"
