Frigo manger et manger frigo

--- a/app/src/main/res/layout/activity_chambre.xml
+++ b/app/src/main/res/layout/activity_chambre.xml
@@ -184,6 +184,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="130dip"
                             android:background="@android:color/transparent"
+                            android:onClick="cliqueManger"
                             app:srcCompat="@drawable/fridge" />
 
                         <Space
